--- a/index.html
+++ b/index.html
@@ -82,6 +82,40 @@
 				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>			
 			</div>
 		</div>
+		<div class="row text-center">
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 portfolio-box">
+				<img src="assets/img/roundicons-free.png" class="img-responsive" alt="round_icons">
+				<h6>Round Icons</h6>
+				<p>Graphic Design</p>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 portfolio-box">
+				<img src="assets/img/startup-framework.png" class="img-responsive" alt="frameworks">
+				<h6>Start Up FrameWorks</h6>
+				<p>Website Design</p>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 portfolio-box">
+				<img src="assets/img/treehouse.png" class="img-responsive" alt="frameworks">
+				<h6>TreeHouse</h6>
+				<p>Website Design</p>
+			</div>
+		</div>
+		<div class="row text-center">
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 portfolio-box">
+				<img src="assets/img/golden.png" class="img-responsive" alt="golden">
+				<h6>Golden</h6>
+				<p>Website Design</p>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 portfolio-box">
+				<img src="assets/img/escape.png" class="img-responsive" alt="scape">
+				<h6>Escape</h6>
+				<p>Website Design</p>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 portfolio-box">
+				<img src="assets/img/dreams.png" class="img-responsive" alt="dream">
+				<h6>Dreams</h6>
+				<p>Website Design</p>
+			</div>
+		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
