terminado hover de links de navbar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		        			<li><a href="#portfolio" id="portfolio-link">PORTFOLIO</a></li>
 		        			<li><a href="#about" id="about-link">ABOUT</a></li>
 		        			<li><a href="#team" id="team-link">TEAM</a></li>
-		        			<li><a href="#contact" id="ccontact-link">CONTACT</a></li>
+		        			<li><a href="#contact" id="contact-link">CONTACT</a></li>
 	        			</ul>
 	    			</div><!-- /.navbar-collapse -->
     			</div>
